# Video

./: .gitignore  PLATFORM_SUPPORT.md  README.md  VERCEL_DEPLOYMENT.md  advanced_tiktok_extractor.py  api.py  api_vercel.py  app.py  app_vercel.py  enhanced_extractor.py  main.py  netlify.toml  package.json  platform_status.py  pyproject.toml  replit.md  routes.py  test_filename.py  test_platform_support.py  test_vercel.py  tiktok_extractor.py  tiktok_status.py  tikwm_extractor.py  utils.py  vercel.json
netlify/functions/: api.py
public/: index.html
static/: app.js
templates/: docs.html  index.html
